# DeckRC

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets_json.template  License.txt  README.md  TODO.txt  vcpkg.json
DeckRC/: CMakeLists.txt  CMakePresets.json  main.cpp
DeckRC/src/: CMakeLists.txt  dog.cpp  main.cpp
Inspiration/: CMakeLists.txt
Inspiration/Tao Classes/: gamepad.cpp  gamepad.h
Tao Classe/: event_handler.cpp  inputs.cpp  inputs.h
cmake/: ClangFormat.cmake
include/: dog.h
lib/Controller/: CMakeLists.txt
lib/Controller/include/: behavior.h  behaviour.h  inputController.h
lib/Controller/src/: inputController.cpp
lib/Test/: CMakeLists.txt
lib/Test/include/: test.h
lib/Test/src/: test.cpp
libs/Controller/: CMakeLists.txt
libs/Controller/include/: behaviour.h  controller.h
libs/Controller/src/: behaviour.cpp  controller.cpp
src/: main.cpp  model.cpp
src/Core/: inputControllerModel.cpp  inputControllerModel.h  inputTypes.h  main.cpp
src/Core/ControllerModel/: Worker.cpp  Worker.h  controllerModel.cpp  controllerModel.h
src/QML/: Main.qml
src/UI/: .qmlls.ini  CaptureButton.qml  ChannelSettings.qml  Main.qml  Main_old.qml  RecordButton.qml  SettingsView.qml
src/UI/Assets/Images/: Background.afphoto
src/UI/Screens/: ChannelSettings.qml  Main.qml
